feat: integrate llm
